# sleepy

./: Cargo.toml  LICENSE  README.md
src/: config.rs  main.rs
src/commands/: error.rs  mod.rs  stat.rs  unknown.rs
src/commands/auto_group/: autosleep.rs  autowoke.rs  mod.rs
src/commands/gn_group/: gm.rs  gn.rs  mod.rs
src/commands/nap_group/: mod.rs  nap.rs  wakey.rs
src/commands/sleep_group/: mod.rs  sleep.rs  woke.rs
src/commands/sleepyheads_group/: mod.rs  sleepyheads.rs  wakers.rs
src/commands/stats/: delete.rs  download.rs  mod.rs  shape.rs  view.rs
src/db/: data.rs  mod.rs
src/presence/: cache.rs  mod.rs
src/util/: interaction.rs  mod.rs  option.rs
src/util/random/: color.rs  gif.rs  mod.rs
