[package]
name = "sleepy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"

anyhow = "1.0.66"

chrono = { version = "0.4.22", features = [ "serde" ] }
mongodb = "2.3.1"
futures = "0.3.25"
serde = "1.0.147"
serde_json = "1.0.87"

[dependencies.serenity]
default-features = false
features = [ "client", "gateway", "rustls_backend", "model", "cache" ]
version = "0.11.5"